# plexy-glass

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  clippy.toml  rustfmt.toml
.cargo/: mutants.toml
.config/: nextest.toml
.github/workflows/: ci.yml
crates/client/: Cargo.toml
crates/client/src/: args.rs  bridge.rs  error.rs  install.rs  kill.rs  lib.rs  negotiate.rs  picker.rs  pump.rs  query.rs  roster.rs  shell_integration.rs  transport.rs  tty.rs
crates/client/tests/: bridge_roundtrip.rs  fuzz_picker.rs  prop_picker.rs  prop_roster.rs
crates/config/: Cargo.toml
crates/config/src/: color.rs  default.rs  kdl_config.rs  lib.rs  load.rs  tests.rs  types.rs
crates/config/tests/: prop_config.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: args.rs  connection.rs  declared.rs  error.rs  first_run.rs  input_router.rs  lib.rs  listener.rs  lock.rs  osc_actions.rs  pane.rs  panic_hook.rs  paste_buffers.rs  paths.rs  persist.rs  pipe.rs  popup.rs  registry.rs  renderer.rs  session.rs  window.rs  window_manager.rs
crates/daemon/src/session/: coordinator.rs  mod.rs  restore.rs
crates/daemon/src/window_manager/: commands.rs  mod.rs  mouse.rs  overlays.rs  tests.rs
crates/daemon/tests/: graphics_frame_size.rs  multi_client.rs  repro_blocking_lock.rs  status_default.rs
crates/emulator/: Cargo.toml
crates/emulator/src/: attrs.rs  cell.rs  color.rs  coords.rs  cursor.rs  emulator.rs  graphics.rs  grid.rs  hyperlinks.rs  keyboard.rs  lib.rs  modes.rs  parser.rs  reflow.rs  screen.rs  scrollback.rs  tabs.rs  terminfo.rs  width.rs
crates/emulator/testdata/: claude-code-startup.raw
crates/emulator/tests/: fuzz_emulator.rs  fuzz_graphics.rs  prop_charset.rs  prop_erase.rs  prop_esc_index.rs  prop_graphics.rs  prop_grid.rs  prop_reflow.rs  prop_width.rs  vt_conformance.rs
crates/emulator/tests/__fuzz__/graphics_advance/corpus/: iterm2_malformed_base64  iterm2_valid_inline  kitty_animation_compose  kitty_animation_full  kitty_delete_all  kitty_delete_by_id  kitty_garbage_keys  kitty_huge_dims_no_payload  kitty_place_with_z  kitty_transmit_chunked  kitty_transmit_display  sixel_truncated_huge_dims  sixel_valid_small
crates/keys/: Cargo.toml
crates/keys/src/: build.rs  encode.rs  lib.rs  parser.rs  paste.rs  spec.rs
crates/keys/tests/: fuzz_keys.rs  prop_keys.rs
crates/mux/: Cargo.toml
crates/mux/src/: block_mode.rs  blocks.rs  borders.rs  buffer.rs  command_prompt.rs  compositor.rs  copy_mode.rs  diff.rs  direction.rs  finder.rs  hint.rs  history.rs  key.rs  keymap.rs  layout.rs  lib.rs  line.rs  mouse.rs  overlay.rs  palette.rs  pane_id.rs  preset.rs  rect.rs  selection.rs  status.rs  tree.rs  virtual_screen.rs
crates/mux/src/snapshots/: plexy_glass_mux__compositor__tests__snapshot_block_mode_folds_collapsed.snap  plexy_glass_mux__compositor__tests__snapshot_block_status_border.snap  plexy_glass_mux__compositor__tests__snapshot_copy_mode_search_highlight.snap  plexy_glass_mux__compositor__tests__snapshot_copy_mode_selection.snap  plexy_glass_mux__compositor__tests__snapshot_live_view_folded_block.snap  plexy_glass_mux__compositor__tests__snapshot_overlay_command_prompt.snap  plexy_glass_mux__compositor__tests__snapshot_overlay_help_box.snap  plexy_glass_mux__compositor__tests__snapshot_popup_box.snap  plexy_glass_mux__compositor__tests__snapshot_single_pane_wide_char.snap  plexy_glass_mux__compositor__tests__snapshot_status_bar_bottom.snap  plexy_glass_mux__compositor__tests__snapshot_status_bar_top.snap  plexy_glass_mux__compositor__tests__snapshot_sticky_header_dim.snap  plexy_glass_mux__compositor__tests__snapshot_two_pane_split_border.snap  plexy_glass_mux__diff__tests__snapshot_placeholder_box.snap
crates/mux/tests/: fuzz_compositor.rs  fuzz_mouse.rs  prop_blocks.rs  prop_command_prompt.rs  prop_diff.rs  prop_finder.rs  prop_hint.rs  prop_layout.rs  prop_mouse.rs  prop_overlays.rs  prop_preset.rs  prop_ratio.rs  prop_selection.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: codec.rs  errors.rs  handshake.rs  lib.rs  messages.rs  session_name.rs
crates/protocol/tests/: prop_session_name.rs  session_entry_wire.rs
crates/status/: Cargo.toml
crates/status/src/: engine.rs  glyphs.rs  lib.rs  style.rs  widget.rs  widgets.rs
crates/status/src/widgets/: git_branch.rs  mod.rs  shell.rs  simple.rs  system.rs  time.rs  window_list.rs
docs/: command-blocks.md  configuration.md  inline-graphics.md  releasing.md  scripting.md  ssh.md  testing.md
src/: main.rs  version_fmt.rs
tests/: e2e.rs
