[workspace]
members = ["crates/protocol", "crates/daemon", "crates/client", "crates/config", "crates/emulator", "crates/keys", "crates/mux", "crates/status"]

[profile.fuzz]
inherits = "dev"
opt-level = 1
debug = false

[package]
name = "plexy-glass"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A terminal multiplexer that treats the modern terminal — inline images, shell integration, keyboard protocols, hyperlinks/clipboard — as first-class rather than stripping it."
repository = "https://github.com/mgattozzi/plexy-glass"
homepage = "https://github.com/mgattozzi/plexy-glass"
readme = "README.md"
keywords = ["terminal", "multiplexer", "tmux", "tui", "cli"]
categories = ["command-line-utilities"]
authors = ["Michael Gattozzi <mgattozzi@variational.io>"]

[[bin]]
name = "plexy-glass"
path = "src/main.rs"

[dependencies]
plexy-glass-protocol = { path = "crates/protocol" }
plexy-glass-daemon = { path = "crates/daemon" }
plexy-glass-client = { path = "crates/client" }
clap = { version = "4.6", features = ["derive"] }
anyhow = "1.0.102"
tokio = { version = "1.52", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2.2"
tempfile = "3.27"
portable-pty = "0.9"
serde_json = { workspace = true }

[workspace.dependencies]
tokio = { version = "1.52", features = [
    "rt-multi-thread", "net", "io-util", "io-std", "signal", "process",
    "sync", "macros", "time", "fs",
] }
serde = { version = "1.0.228", features = ["derive"] }
postcard = { version = "1.1", default-features = false, features = ["alloc"] }
bytes = { version = "1.11", features = ["serde"] }
thiserror = "2.0"
kdl = "6.7.1"
humantime = "2.3.0"
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
async-trait = "0.1.89"
nix = { version = "0.31", features = ["signal", "fs", "process", "term", "ioctl", "user"] }
portable-pty = "0.9"
directories = "6.0"
serde_json = "1.0.150"
chrono = { version = "0.4.44", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.6", features = ["derive"] }
tempfile = "3.27"
tokio-test = "0.4.5"
vte = "0.15.0"
smol_str = "0.3.6"
regex = "1.12.4"
unicode-width = "0.2.2"
unicode-segmentation = "1.13.2"
bitflags = "2.11.1"
# Property-based testing (Hypothesis-derived; dev-only). Imported as
# `hegel`.
hegeltest = "0.23.1"
# Coverage-guided + property fuzzing (Hypothesis-style). Dev-only.
bolero = "0.13.4"
