[workspace]
members = ["crates/protocol", "crates/daemon", "crates/client", "crates/config", "crates/emulator", "crates/keys", "crates/mux", "crates/status"]

# Strict, deny-by-default lints for the whole workspace (applied to
# every crate via `[lints] workspace = true`). Runs over
# `--workspace --all-targets`. `clippy::restriction` is deliberately NOT
# enabled: it is opt-in-per-lint by design (it bundles
# mutually-contradictory lints), so denying it wholesale is unusable.
# Specific restriction lints can be added individually if wanted. Group
# denies use priority = -1 so individual `allow`s below (priority 0)
# win.
[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
# The "no unwrap in non-test code" rule (CLAUDE.md) as a gate. `expect` stays
# ungated — it's the sanctioned `// invariant:` escape hatch. Tests are exempt
# via `allow-unwrap-in-tests` in clippy.toml.
unwrap_used = "deny"
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
# Deliberate allow-list (priority 0 overrides the group denies above).
# Each is a policy choice, not an oversight, the rest of the
# pedantic/nursery/cargo groups stay deny. Everything the groups flag
# beyond this list is FIXED in code.
#
# Terminal geometry casts between u16 (rows/cols/coords, bounded by the
# grid) and usize (indices) are pervasive and safe by construction:
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
# Doc-requirement lints would demand `# Errors`/`# Panics`/`#[must_use]`
# across most of the internal API of a single-binary app, not worth the
# churn:
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
# Subjective naming/shape; the current forms are intentional:
module_name_repetitions = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
fn_params_excessive_bools = "allow"  # a few flag-heavy painter/layout fns are intentional
too_many_lines = "allow"
doc_markdown = "allow"
# `cargo` group: transitive duplicate dep versions we don't control, and
# per-crate publish metadata (license/description/keywords) on the
# internal, path-only member crates that are never published
# independently:
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"
# Nursery/pedantic style that is subjective or a deliberate local
# pattern:
option_if_let_else = "allow"       # map_or_else is not always clearer
items_after_statements = "allow"   # helper items after stmts are intentional
too_long_first_doc_paragraph = "allow"  # module docs are intentionally thorough
many_single_char_names = "allow"   # geometry code uses r/c/x/y
# Test assertions use `other => panic!("expected X, got {other:?}")` over
# small enums to print the unexpected variant on failure, an informative
# idiom, not a defect (naming the variant would drop the `{other:?}`
# output):
match_wildcard_for_single_variants = "allow"
# The daemon's lock scoping is DELIBERATE (e.g. the WindowManager lock is
# held across the whole compose pass for frame atomicity, and guards are
# held in match scrutinees on purpose). These nursery lints would fight
# that design and the lock-ordering the panic-supervision /
# off-lock-clipboard work established:
significant_drop_tightening = "allow"
significant_drop_in_scrutinee = "allow"
# Some handler/interface methods stay `async` for call-site uniformity
# across the async daemon even when they don't currently await:
unused_async = "allow"
# By-value params are a deliberate ownership/API shape on hot-path
# signatures (e.g. Pane::spawn takes its spec/config by value); and
# `naive_bytecount` would push a `bytecount` dependency for what is
# mostly test-only byte counting:
needless_pass_by_value = "allow"
naive_bytecount = "allow"
# Individually-enabled `restriction` lints (the group as a whole stays
# off, it is opt-in per lint by design). These enforce house style
# mechanically:
absolute_paths = "deny"                  # use-imports, never fully-qualified inline paths
dbg_macro = "deny"                        # no leftover dbg!()
todo = "deny"                             # no todo!()
unimplemented = "deny"                    # no unimplemented!()
allow_attributes_without_reason = "deny"  # every #[allow] carries reason = "…"

# Profile for the nightly `cargo bolero … -e libfuzzer` deep runs only;
# inert for normal builds/tests. Inherits `dev` to keep
# debug-assertions + overflow-checks on, then opts for fuzz throughput
# (opt-level 3) and readable crash backtraces.
[profile.fuzz]
inherits = "dev"
opt-level = 3
debug = true

[package]
name = "plexy-glass"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A terminal multiplexer that treats the modern terminal — inline images, shell integration, keyboard protocols, hyperlinks/clipboard — as first-class rather than stripping it."
repository = "https://github.com/mgattozzi/plexy-glass"
homepage = "https://github.com/mgattozzi/plexy-glass"
readme = "README.md"
keywords = ["terminal", "multiplexer", "tmux", "tui", "cli"]
categories = ["command-line-utilities"]
authors = ["Michael Gattozzi <mgattozzi@variational.io>"]

[lints]
workspace = true

[[bin]]
name = "plexy-glass"
path = "src/main.rs"

[dependencies]
plexy-glass-protocol = { path = "crates/protocol" }
plexy-glass-daemon = { path = "crates/daemon" }
plexy-glass-client = { path = "crates/client" }
clap = { version = "4.6", features = ["derive"] }
anyhow = "1.0.102"
tokio = { version = "1.52", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2.2"
tempfile = "3.27"
portable-pty = "0.9"
serde_json = { workspace = true }

[workspace.dependencies]
tokio = { version = "1.52", features = [
    "rt-multi-thread", "net", "io-util", "io-std", "signal", "process",
    "sync", "macros", "time", "fs",
] }
serde = { version = "1.0.228", features = ["derive"] }
postcard = { version = "1.1", default-features = false, features = ["alloc"] }
bytes = { version = "1.11", features = ["serde"] }
thiserror = "2.0"
kdl = "6.7.1"
humantime = "2.3.0"
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
async-trait = "0.1.89"
nix = { version = "0.31", features = ["signal", "fs", "process", "term", "ioctl", "user"] }
libc = "0.2.186"
portable-pty = "0.9"
directories = "6.0"
serde_json = "1.0.150"
chrono = { version = "0.4.44", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.6", features = ["derive"] }
tempfile = "3.27"
tokio-test = "0.4.5"
vte = "0.15.0"
smol_str = "0.3.6"
regex = "1.12.4"
unicode-width = "0.2.2"
unicode-segmentation = "1.13.2"
bitflags = "2.11.1"
# Property-based testing (Hypothesis-derived; dev-only). Imported as
# `hegel`.
hegeltest = "0.23.1"
# Coverage-guided + property fuzzing (Hypothesis-style). Dev-only.
bolero = "0.13.4"
# Snapshot testing of composed frames (dev-only).
insta = "1.48.0"
# `#[mutants::skip]` attribute for annotating equivalent mutants
# (dev-only; compiles to nothing). Used via
# `#[cfg_attr(test, mutants::skip)]`.
mutants = "0.0.4"
