[package]
name = "plexy-glass-client"
version = "0.1.0"
edition = "2024"

[dependencies]
plexy-glass-protocol = { path = "../protocol" }
postcard = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
nix = { workspace = true }
serde = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
directories = { workspace = true }
plexy-glass-daemon = { path = "../daemon" }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
portable-pty = { workspace = true }
