[package]
name = "plexy-glass-client"
version = "0.1.0"
edition = "2024"

[dependencies]
plexy-glass-protocol = { path = "../protocol" }
plexy-glass-emulator = { path = "../emulator" }
postcard = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
nix = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
plexy-glass-daemon = { path = "../daemon" }
plexy-glass-config = { path = "../config" }
plexy-glass-status = { path = "../status" }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
portable-pty = { workspace = true }
hegeltest = { workspace = true }

[lints]
workspace = true
