[package]
name = "plexy-glass-config"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
humantime-serde = { workspace = true }
directories = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
