[package]
name = "plexy-glass-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
plexy-glass-protocol = { path = "../protocol" }
plexy-glass-emulator = { path = "../emulator" }
plexy-glass-mux = { path = "../mux" }
postcard = { workspace = true }
tokio = { workspace = true }
portable-pty = { workspace = true }
nix = { workspace = true }
serde = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2.5"
thiserror = { workspace = true }
anyhow = { workspace = true }
directories = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
