[package]
name = "plexy-glass-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
plexy-glass-protocol = { path = "../protocol" }
plexy-glass-emulator = { path = "../emulator" }
plexy-glass-mux = { path = "../mux" }
plexy-glass-keys = { path = "../keys" }
plexy-glass-config = { path = "../config" }
plexy-glass-status = { path = "../status" }
postcard = { workspace = true }
tokio = { workspace = true }
portable-pty = { workspace = true }
nix = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
directories = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }

[lints]
workspace = true
