[package]
name = "plexy-glass-protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
postcard = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }

[lints]
workspace = true
