[package]
name = "plexy-glass-status"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
plexy-glass-config = { path = "../config" }
plexy-glass-emulator = { path = "../emulator" }
async-trait = { workspace = true }
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
sysinfo = { version = "0.39.2", default-features = false, features = ["system"] }
nix = { workspace = true, features = ["hostname"] }
battery = "0.7.8"
smol_str = { workspace = true }
tokio = { workspace = true, features = ["sync", "process", "time", "macros"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = { workspace = true }

[lints]
workspace = true
